removed every occurance of List.of